--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@fontsource/roboto": "^4.5.0",
 		"ajv": "^8.17.1",
 		"apexcharts": "^3.27.3",
+		"babel-preset-react-app": "^10.0.1",
 		"classnames": "2.3.1",
 		"framer-motion": "4.1.17",
 		"match-sorter": "6.3.0",
@@ -54,17 +55,17 @@
 		"install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
 	},
 	"optionalDependencies": {
-		"@babel/core": "7.14.0",
+		"@babel/core": "^7.26.0",
 		"typescript": "4.2.4"
 	},
 	"devDependencies": {
 		"@babel/plugin-transform-react-jsx-source": "^7.14.5",
+		"cross-env": "^7.0.3",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-prettier": "3.4.0",
 		"gulp": "4.0.2",
 		"gulp-append-prepend": "1.0.9",
-		"prettier": "2.2.1",
-		"cross-env": "^7.0.3"
+		"prettier": "2.2.1"
 	},
 	"browserslist": {
 		"production": [
